fixed spacing

--- a/client/src/app/components/footer/footer.component.css
+++ b/client/src/app/components/footer/footer.component.css
@@ -1,4 +1,5 @@
 body {
+	margin-top: 10%;
 	color: white;
 	font-size: 1.5em;
 }
