--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -12,6 +12,6 @@ h2 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 5em; fon
 }
 
 .desc {
-	margin-left: 20%;
-	margin-right: 20%;
+	margin-left: 7%;
+	margin-right: 7%;
 }
